syntax = "proto3";

package country_subdivisions;

option go_package = "github.com/razorpay/i18nify/i18nify-data/go/country/subdivisions;country_subdivisions";

// CountrySubdivisions contains subdivision information for a country.
// Data files: Multiple JSON files per country code (IN.json, MY.json, SG.json, US.json)
message CountrySubdivisions {
  string country_name = 1;
  map<string, State> states = 2;
}

// State represents a state or province within a country.
message State {
  string name = 1;
  map<string, City> cities = 2;
}

// City represents a city within a state.
message City {
  string name = 1;
  string region_name = 2;  // Also known as district_name
  string timezone = 3;
  repeated string zipcodes = 4;
}

